--- a/package.json
+++ b/package.json
@@ -15,14 +15,23 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/store": "^2.0.2",
+    "@types/styled-components": "^5.1.26",
+    "animate.css": "^4.1.1",
+    "antd": "^5.4.0",
     "axios": "^1.3.5",
     "cesium": "^1.104.0",
+    "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "store": "^2.0.12",
+    "styled-components": "^5.3.9",
     "typescript": "^5.0.2",
+    "underscore": "^1.13.6",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
