--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@arction/lcjs": "^4.0.2",
+    "@arction/xydata": "^1.4.0",
     "@craco/craco": "^7.1.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
