--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cesium": "^1.104.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
+    "echarts": "^5.4.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
