--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.5",
     "cesium": "^1.104.0",
     "classnames": "^2.3.2",
+    "colormap": "^2.3.2",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.2",
     "normalize.css": "^8.0.1",
