--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "styled-components": "^5.3.9",
     "typescript": "^5.0.2",
     "underscore": "^1.13.6",
+    "wavesurfer.js": "^6.6.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
