--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "antd": "^5.2.3",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "default-passive-events": "^2.0.0",
     "echarts": "^5.4.1",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
