新增以及修改页面

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "pcm-player": "^0.0.16",
     "progress-bar-webpack-plugin": "^2.1.0",
     "react": "^18.2.0",
     "react-bmapgl": "^0.2.24",
@@ -43,6 +44,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.8.3",
     "recorder-core": "^1.2.23020100",
     "redux-devtools-extension": "^2.13.9",
     "store": "^2.0.12",
