--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "my-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tianyi-miku.github.io/reactdemo/",
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -31,6 +33,7 @@
     "dayjs": "^1.11.7",
     "default-passive-events": "^2.0.0",
     "echarts": "^5.4.1",
+    "gh-pages": "^6.0.0",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
