--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "my-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tianyi-miku.github.io/reactdemo/",
+  "homepage": "https://tianyi-miku.github.io/Tianyi-miku.github.io-reactdemo/",
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
